--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "6.3.0",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
+    "uniqid": "^5.4.0",
     "yup": "^0.32.11"
   },
   "scripts": {
