--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "berry-free-material-react-cra",
+  "name": "Sentertainment-free-material-react-cra",
   "version": "3.3.2",
   "private": true,
-  "homepage": "https://berrydashboard.io/",
+  "homepage": "https://Sentertainmentdashboard.io/",
   "dependencies": {
     "@emotion/cache": "^11.9.3",
     "@emotion/react": "^11.9.3",
@@ -20,6 +20,7 @@
     "framer-motion": "^6.3.16",
     "material-react-table": "^1.14.0",
     "material-ui-popup-state": "^4.0.1",
+    "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
